# drone-mark3

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.devcontainer/: arm-none-eabi.Dockerfile  devcontainer.json
bsp/: CMakeLists.txt  bsp.c  bsp.h  bsp_uart.c  bsp_uart.h
cmake/: gcc-arm-none-eabi.cmake
cubeide/: .cproject  .mxproject  .project  CMakeLists.txt  README.md  mark-3.ioc  mark-3.launch
cubeide/Core/Inc/: main.h  stm32f4xx_it.h
cubeide/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
doc/: block_diagram.md
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt  sft_def.h
lib/cpp/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/: CMakeLists.txt  mark3_main.cpp  mark3_main.hpp
